Updated Navigation Drawer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,13 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="logout">Logout</string>
+    <string name="about">About</string>
+    <string name="share">Share</string>
+    <string name="rate_us">Rate us</string>
+    <string name="feedback_suggestion">Feedback/Suggestion</string>
+    <string name="investing_quotes">Investing Quotes</string>
+    <string name="request_topic">Request Topic</string>
+    <string name="bookmarks">Bookmarks</string>
+    <string name="home">Home</string>
 </resources>
